Fixes for alignment + Caption instead of Body kit

--- a/playbook/app/pb_kits/playbook/pb_advanced_table/_advanced_table.scss
+++ b/playbook/app/pb_kits/playbook/pb_advanced_table/_advanced_table.scss
@@ -58,6 +58,7 @@
       border-right: 1px solid $border_light !important;
     }
     .table-header-cells-custom {
+      text-align:center;
       [class^=pb_checkbox_kit] .pb_checkbox_label {
         padding-left: 0px;
       }
